--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -130,6 +130,7 @@ if (IRR_BUILD_CEGUI)
     find_package(EXPAT REQUIRED)
     find_package(Freetype REQUIRED)
     find_package(GLEW REQUIRED)
+    find_package(PCRE REQUIRED)
 		set(CEGUI_LIBS
 			"${CEGUI_INSTALL_PATH}/lib/libCEGUIOpenGLRenderer-0_Static.a "
 			"${CEGUI_INSTALL_PATH}/lib/libCEGUIBase-0_Static.a "
@@ -138,7 +139,8 @@ if (IRR_BUILD_CEGUI)
 			"${CEGUI_INSTALL_PATH}/lib/libCEGUISTBImageCodec_Static.a "
 			"${FREETYPE_LIBRARIES}"
 			"${CEGUI_INSTALL_PATH}/lib/libCEGUICoreWindowRendererSet_Static.a "
-			"${EXPAT_LIBRARIES}"
+			"${EXPAT_LIBRARIES} "
+			"${PCRE_LIBRARIES}"
 			PARENT_SCOPE
 		)
 	endif()
