Fix for MSVC to find CEGUI's include

--- a/ext/CEGUI/CMakeLists.txt
+++ b/ext/CEGUI/CMakeLists.txt
@@ -12,11 +12,16 @@ set(IRR_CEGUI_EXT_SRC
 	Helpers.cpp
 )
 
+set(IRR_CEGUI_EXT_EXTERNAL_INCLUDE
+  "${CEGUI_INCLUDE_PATH}"
+  "${CMAKE_SOURCE_DIR}/3rdparty/CEGUI/cegui/dependencies/include"
+)
+
 irr_create_library_project(
   IrrCEGUIExt
   "${IRR_CEGUI_EXT_SRC}"
   "-DCEGUI_STATIC -DCEGUI_BUILD_STATIC_FACTORY_MODULE"
-  "${CEGUI_INCLUDE_PATH}"
+  "${IRR_CEGUI_EXT_EXTERNAL_INCLUDE}"
   "${CEGUI_LIBS}"
 )
 
@@ -35,6 +40,8 @@ set(IRR_CEGUI_EXT_INCLUDE_DIRS
 	"${CMAKE_INSTALL_PREFIX}/include/"
   "${CMAKE_INSTALL_PREFIX}/debug/include/"
 	"${CMAKE_INSTALL_PREFIX}/include/irr/ext/GUI"
+	"${CMAKE_INSTALL_PREFIX}/include/irr/ext/GUI/include"
   "${CMAKE_INSTALL_PREFIX}/debug/include/irr/ext/GUI"
+  "${CMAKE_INSTALL_PREFIX}/debug/include/irr/ext/GUI/include"
 )
 set(IRR_CEGUI_EXT_INCLUDE_DIRS ${IRR_CEGUI_EXT_INCLUDE_DIRS} PARENT_SCOPE)
