--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
 # Code::Blocks files
 *.depend
 *.layout
-# Visual Studio
+# Visual Studio Code
 .vscode/*
 # temporary compiler files
 *.objs*
 *.d
 *.o
+# CEGUI's downloaded dependencies on Windows
+3rdparty/CEGUI/cegui-deps-0.8.x-src.zip
 # usually where people build
 build/*
-# cegui downloaded deps on Windows
-3rdparty/CEGUI/cegui-deps-0.8.x-src.zip
 # build generated config
 include/irr/config
 # default install paths
