--- a/ext/CEGUI/CMakeLists.txt
+++ b/ext/CEGUI/CMakeLists.txt
@@ -20,7 +20,7 @@ set(IRR_CEGUI_EXT_EXTERNAL_INCLUDE
 add_compile_definitions(CEGUI_STATIC CEGUI_BUILD_STATIC_FACTORY_MODULE)
 
 irr_create_library_project(
-  IrrCEGUIExt
+  IrrExtCEGUI
   "${IRR_CEGUI_EXT_SRC}"
   ""
   "${IRR_CEGUI_EXT_EXTERNAL_INCLUDE}"
