--- a/3rdparty/CEGUI/CMakeLists.txt
+++ b/3rdparty/CEGUI/CMakeLists.txt
@@ -101,6 +101,7 @@ set(CEGUI_BUILD_RENDERER_OPENGL3 ON CACHE BOOL "")
 set(CEGUI_BUILD_STATIC_CONFIGURATION ON CACHE BOOL "")
 set(CEGUI_BUILD_STATIC_FACTORY_MODULE ON CACHE BOOL "")
 set(CEGUI_STATIC_XMLPARSER_MODULE "CEGUIExpatParser" CACHE STRING "")
+set(CEGUI_STATIC_DEPENDENCIES ON CACHE BOOL "")
 
 add_subdirectory(cegui EXCLUDE_FROM_ALL)
 
