Set CEGUI's projects as dependencies of ext

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -166,6 +166,12 @@ if(IRR_BUILD_CEGUI)
 	add_definitions(-DIRR_BUILD_CEGUI)
 	set(IRR_CEGUI_EXT_INCLUDE_DIRS "")
 	add_subdirectory(./ext/CEGUI)
+	add_dependencies(IrrExtCEGUI CEGUIBase-0_Static)
+	add_dependencies(IrrExtCEGUI CEGUICommonDialogs-0_Static)
+	add_dependencies(IrrExtCEGUI CEGUICoreWindowRendererSet_Static)
+	add_dependencies(IrrExtCEGUI CEGUIExpatParser_Static)
+	add_dependencies(IrrExtCEGUI CEGUIOpenGLRenderer-0_Static)
+	add_dependencies(IrrExtCEGUI CEGUISTBImageCodec_Static)
 endif()
 
 if(IRR_BUILD_EXAMPLES)
