Implement ext framework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -162,17 +162,7 @@ if(IRR_BUILD_TOOLS)
 	add_subdirectory(tools) # convert2BAW
 endif()
 
-if(IRR_BUILD_CEGUI)
-	add_definitions(-DIRR_BUILD_CEGUI)
-	set(IRR_CEGUI_EXT_INCLUDE_DIRS "")
-	add_subdirectory(./ext/CEGUI)
-	add_dependencies(IrrExtCEGUI CEGUIBase-0_Static)
-	add_dependencies(IrrExtCEGUI CEGUICommonDialogs-0_Static)
-	add_dependencies(IrrExtCEGUI CEGUICoreWindowRendererSet_Static)
-	add_dependencies(IrrExtCEGUI CEGUIExpatParser_Static)
-	add_dependencies(IrrExtCEGUI CEGUIOpenGLRenderer-0_Static)
-	add_dependencies(IrrExtCEGUI CEGUISTBImageCodec_Static)
-endif()
+add_subdirectory(ext)
 
 if(IRR_BUILD_EXAMPLES)
 	add_subdirectory(examples_tests)
