--- a/.gitmodules
+++ b/.gitmodules
@@ -43,13 +43,13 @@
 	url = https://github.com/LuaDist/libjpeg.git
 [submodule "examples_tests/media/cegui_alfisko"]
 	path = examples_tests/media/cegui_alfisko
-	url = git@gitlab.com:InnerPieceOSS/cegui_alfisko.git
+	url = https://gitlab.com/InnerPieceOSS/cegui_alfisko.git
 [submodule "3rdparty/CEGUI/cegui"]
 	path = 3rdparty/CEGUI/cegui
-	url = git@gitlab.com:InnerPieceOSS/cegui.git
+	url = https://github.com/nothings/stb.git
 [submodule "ext/CEGUI/stb"]
 	path = ext/CEGUI/stb
-	url = git@github.com:nothings/stb.git
+	url = https://github.com/nothings/stb.git
 [submodule "3rdparty/portable-file-dialogs"]
 	path = 3rdparty/portable-file-dialogs
-	url = git@github.com:samhocevar/portable-file-dialogs.git
+	url = https://github.com/samhocevar/portable-file-dialogs.git
