Divided CGLSLFunctionGenerator into 2 builtin loaders

--- a/source/Irrlicht/CMakeLists.txt
+++ b/source/Irrlicht/CMakeLists.txt
@@ -75,6 +75,10 @@ set(IRRLICHT_SRCS_COMMON
 	${CMAKE_SOURCE_DIR}/src/irr/asset/IAssetWriter.cpp
 	${CMAKE_SOURCE_DIR}/src/irr/asset/IAssetLoader.cpp
 	
+# Builtin loaders
+	${CMAKE_SOURCE_DIR}/src/irr/video/CGLSLScanBuiltinIncludeLoader.cpp
+	${CMAKE_SOURCE_DIR}/src/irr/asset/CGLSLVertexShaderBuiltinIncludeLoader.cpp
+	
 # Shaders
 	${CMAKE_SOURCE_DIR}/src/irr/asset/IGLSLCompiler.cpp
 	${CMAKE_SOURCE_DIR}/src/irr/asset/ICPUShader.cpp
