--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,22 @@
+# Copyright (c) 2019 DevSH Graphics Programming Sp. z O.O.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+
 cmake_minimum_required(VERSION 3.1)
+#policies
+#cmake_policy(SET CMP0072 NEW) #not yet, would need to get pointers to all OpenGL functions
+
 project(Irrlicht LANGUAGES CXX C)
 
 # Configure CCache if available
@@ -6,6 +24,7 @@ find_program(CCACHE_FOUND ccache)
 if(CCACHE_FOUND)
   set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
   set_property(GLOBAL PROPERTY RULE_LAUNCH_LINK ccache)
+  option(USE_CCACHE "Some dependency is using it, but I just don't know which!" ON)
 endif(CCACHE_FOUND)
 
 if((MSVC_VERSION AND NOT ${CMAKE_CXX_COMPILER_VERSION} VERSION_LESS 19.11) OR
@@ -85,7 +104,7 @@ macro(irr_adjust_flags)
 			)
 		endif()
 		if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-			add_compile_options("$<$CONFIG:DEBUG>:-ggdb3>")
+			add_compile_options("$<$<CONFIG:DEBUG>:-ggdb3>")
 		endif()
 	elseif(MSVC) # /arch:sse3 or anything like this is not needed on x64 on MSVC for enabling sse3 instructions
 		# debug
