--- a/3rdparty/CEGUI/CMakeLists.txt
+++ b/3rdparty/CEGUI/CMakeLists.txt
@@ -1,3 +1,18 @@
+# Copyright (c) 2019 DevSH Graphics Programming Sp. z O.O.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+
 if (MSVC) # MSVC needs to download and build dependencies of CEGUI
     set(CEGUI_DEPS_URL "https://sourceforge.net/projects/crayzedsgui/files/CEGUI%20Mk-2%20Dependencies/0.8.x/cegui-deps-0.8.x-src.zip/download")
     set(CEGUI_DEPS_ARCHIVE ${CMAKE_CURRENT_SOURCE_DIR}/cegui-deps-0.8.x-src.zip)
