--- a/ext/CMakeLists.txt
+++ b/ext/CMakeLists.txt
@@ -9,3 +9,15 @@ if (IRR_BUILD_CEGUI)
         PARENT_SCOPE
     )
 endif()
+
+if (IRR_BUILD_BULLET)
+    add_subdirectory(Bullet)
+    set(IRR_EXT_BULLET_INCLUDE_DIRS
+        ${IRR_EXT_BULLET_INCLUDE_DIRS}
+        PARENT_SCOPE
+    )
+    set(IRR_EXT_BULLET3_LIB
+        ${IRR_EXT_BULLET_LIB}
+        PARENT_SCOPE
+    )
+endif()
