--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,9 @@
 [submodule "3rdparty/freetype2"]
 	path = 3rdparty/freetype2
 	url = https://git.sv.nongnu.org/r/freetype/freetype2.git
+[submodule "3rdparty/CEGUI/pcre"]
+	path = 3rdparty/CEGUI/pcre
+	url = https://github.com/svn2github/pcre.git
+[submodule "3rdparty/CEGUI/glew"]
+	path = 3rdparty/CEGUI/glew
+	url = https://github.com/nigels-com/glew.git
