--- a/.gitmodules
+++ b/.gitmodules
@@ -46,8 +46,8 @@
 	url = https://gitlab.com/InnerPieceOSS/cegui_alfisko.git
 [submodule "3rdparty/CEGUI/cegui"]
 	path = 3rdparty/CEGUI/cegui
-  url = https://gitlab.com/InnerPieceOSS/cegui.git
-  branch = saga
+	url = https://gitlab.com/InnerPieceOSS/cegui.git
+	branch = saga
 [submodule "ext/CEGUI/stb"]
 	path = ext/CEGUI/stb
 	url = https://github.com/nothings/stb.git
@@ -55,18 +55,34 @@
 	path = 3rdparty/portable-file-dialogs
 	url = https://github.com/samhocevar/portable-file-dialogs.git
 [submodule "3rdparty/libexpat"]
+
 	path = 3rdparty/libexpat
+
 	url = https://github.com/libexpat/libexpat.git
+
 	branch = master
+
 [submodule "3rdparty/glm"]
+
 	path = 3rdparty/glm
+
 	url = https://github.com/g-truc/glm.git
+
 [submodule "3rdparty/freetype2"]
+
 	path = 3rdparty/freetype2
+
 	url = https://git.sv.nongnu.org/r/freetype/freetype2.git
+
 [submodule "3rdparty/CEGUI/pcre"]
+
 	path = 3rdparty/CEGUI/pcre
+
 	url = https://github.com/svn2github/pcre.git
+
 [submodule "3rdparty/CEGUI/glew"]
+
 	path = 3rdparty/CEGUI/glew
-	url = https://github.com/nigels-com/glew.git
+
+	url = https://github.com/Perlmint/glew-cmake.git
+	branch = master
