--- a/ext/Bullet/CMakeLists.txt
+++ b/ext/Bullet/CMakeLists.txt
@@ -1,6 +1,6 @@
-file(GLOB_RECURSE BULLETCOLLISION_SRC ${BULLET_INCLUDE_PATH}/BulletCollision/*.cpp)
-file(GLOB_RECURSE BULLETDYNAMICS_SRC ${BULLET_INCLUDE_PATH}/BulletDynamics/*.cpp)
-file(GLOB_RECURSE LINEARMATH_SRC ${BULLET_INCLUDE_PATH}/LinearMath/*.cpp)
+file(GLOB_RECURSE BULLETCOLLISION_CPP ${BULLET_INCLUDE_PATH}/BulletCollision/*.cpp)
+file(GLOB_RECURSE BULLETDYNAMICS_CPP ${BULLET_INCLUDE_PATH}/BulletDynamics/*.cpp)
+file(GLOB_RECURSE LINEARMATH_CPP ${BULLET_INCLUDE_PATH}/LinearMath/*.cpp)
 
 
 file(GLOB_RECURSE BULLETCOLLISION_H ${BULLET_INCLUDE_PATH}/BulletCollision/*.h)
